On branch main  Your branch is up to date with 'origin/main'.  Changes to be committed: 	modified:   src/Components/Breadcrums/Breadcrums.css 	modified:   src/Components/CartItems/CartItems.jsx 	modified:   src/Components/Footer/Footer.css 	modified:   src/Components/RelatedProducts/RelatedProducts.css 	modified:   src/Pages/ShopCategory.jsx

--- a/src/Components/Breadcrums/Breadcrums.css
+++ b/src/Components/Breadcrums/Breadcrums.css
@@ -8,3 +8,10 @@
   margin: 60px 170px;
   text-transform: capitalize;
 }
+
+@media only screen and (width < 600px)  {
+  .breadcrums {
+    margin: 20px 40px;
+  }
+}
+
