--- a/src/Components/Offers/Offers.css
+++ b/src/Components/Offers/Offers.css
@@ -6,7 +6,7 @@
   margin: auto;
   padding: 0px 140px;
   margin-bottom: 150px ;
-  background-image: url('../Assets/red_gradient.png');
+  background-image: url('../Assets/exclusive_image.jpg');
   background-size: 1440px;
   background-repeat: no-repeat;
   background-position: center;
@@ -53,7 +53,7 @@
     width: auto;
     background-size: cover;
     background-position: left;
-    height: calc(30vh);
+    height: calc(40vh);
   }
 }
 
@@ -62,7 +62,7 @@
     width: auto;
     background-size: cover;
     background-position: left;
-    height: calc(30vh);
+    height: calc(40vh);
   }
 }
 
@@ -75,7 +75,7 @@
   margin: auto;
   padding: 0px 140px;
   margin-bottom: 150px ;
-  background-image: url('../Assets/red_gradient.png');
+  background-image: url('../Assets/exclusive_image.jpg');
   background-size: 1440px;
   background-repeat: no-repeat;
   background-position: center;
