On branch main  Your branch is up to date with 'origin/main'.  Changes to be committed: 	new file:   src/Components/Assets/banner_kids.png 	new file:   src/Components/Assets/banner_mens.png 	new file:   src/Components/Assets/banner_women.png 	modified:   src/Components/Assets/data.js 	deleted:    src/Components/Assets/exclusive_image.png 	deleted:    src/Components/Assets/p1_product.png 	deleted:    src/Components/Assets/p1_product_i1.png 	deleted:    src/Components/Assets/p1_product_i2.png 	deleted:    src/Components/Assets/p1_product_i3.png 	deleted:    src/Components/Assets/p1_product_i4.png 	modified:   src/Components/Assets/product_1.png 	deleted:    src/Components/Assets/product_10.png 	deleted:    src/Components/Assets/product_11.png 	deleted:    src/Components/Assets/product_12.png 	deleted:    src/Components/Assets/product_13.png 	deleted:    src/Components/Assets/product_14.png 	deleted:    src/Components/Assets/product_15.png 	deleted:    src/Components/Assets/product_16.png 	deleted:    src/Components/Assets/product_17.png 	deleted:    src/Components/Assets/product_18.png 	deleted:    src/Components/Assets/product_19.png 	modified:   src/Components/Assets/product_2.png 	deleted:    src/Components/Assets/product_20.png 	deleted:    src/Components/Assets/product_21.png 	deleted:    src/Components/Assets/product_22.png 	deleted:    src/Components/Assets/product_23.png 	deleted:    src/Components/Assets/product_24.png 	deleted:    src/Components/Assets/product_25.png 	deleted:    src/Components/Assets/product_26.png 	deleted:    src/Components/Assets/product_27.png 	deleted:    src/Components/Assets/product_28.png 	deleted:    src/Components/Assets/product_29.png 	modified:   src/Components/Assets/product_3.png 	deleted:    src/Components/Assets/product_30.png 	deleted:    src/Components/Assets/product_31.png 	deleted:    src/Components/Assets/product_32.png 	deleted:    src/Components/Assets/product_33.png 	deleted:    src/Components/Assets/product_34.png 	

--- a/src/Components/CartItems/CartItems.css
+++ b/src/Components/CartItems/CartItems.css
@@ -116,6 +116,9 @@
   .cartitems-format {
     gap: 10px;
   }
+  .cartitems-promobox {
+    width: 250px;
+  }
 }
 
 @media only screen and (width >= 600px) and (width <= 1199px){
